@@ -13,21 +13,19 @@
     </target>
 
     <path id="javac2.class.path">
-        <pathelement location="lib/forms_rt.jar"/>
         <pathelement location="lib/javac2.jar"/>
-        <pathelement location="lib/annotations.jar"/>
         <pathelement location="lib/asm4-all.jar"/>
         <pathelement location="lib/jdom.jar"/>
-        <pathelement location="lib/AppleJavaExtensions.jar"/>
+        <pathelement location="lib/vecmath.jar"/>
     </path>
     <taskdef name="javac2" classname="com.intellij.ant.Javac2" classpathref="javac2.class.path"/>
 
     <target name="compile" description="Compile java sources" depends="make_dirs">
-        <javac2 destdir="out/production/FlightPlot" includeantruntime="false" debug="true" target="1.6" source="1.6">
+        <javac2 destdir="out/production/FlightPlot" includeantruntime="false" debug="true" encoding="UTF8" target="1.6" source="1.6">
+            <compilerarg value="-Djava.ext.dirs="/>
             <classpath refid="libsclasspath"/>
             <src path="src"/>
             <src path="jMAVlib/src"/>
-            <src path="la4j/src/main/java"/>
         </javac2>
     </target>
 
@@ -42,15 +40,18 @@
             <zipgroupfileset dir="lib" includes="jfreechart-*.jar"/>
             <zipgroupfileset dir="lib" includes="jcommon-*.jar"/>
             <zipgroupfileset dir="lib" includes="forms_rt.jar"/>
+            <zipgroupfileset dir="lib" includes="vecmath.jar"/>
         </jar>
     </target>
 
-    <taskdef name="jarbundler" classpath="lib/jarbundler-2.2.0.jar" classname="net.sourceforge.jarbundler.JarBundler"/>
+    <taskdef name="jarbundler" classpath="lib/jarbundler-2.4.0.jar" classname="net.sourceforge.jarbundler.JarBundler"/>
     <target name="flightplot_mac_os_app" description="Build FlightPlot Mac OS X app" depends="flightplot">
         <jarbundler dir="out/production" name="FlightPlot" mainclass="me.drton.flightplot.FlightPlot"
-                    jar="out/production/flightplot.jar" version="0.2.14"
-                    vmoptions="-Dapple.eawt.quitStrategy=CLOSE_ALL_WINDOWS"
+                    jar="out/production/flightplot.jar" version="0.2.15"
+                    vmoptions="-Dapple.eawt.quitStrategy=CLOSE_ALL_WINDOWS -Djava.ext.dirs="
                     stubfile="lib/JavaApplicationStub"
+                    jvmversion="1.6+"
+                    hirescapable="true"
                 />
     </target>
 
